# dak_game

./: .gitignore  Cargo.toml  README.md  badguy-ref.gd  badguy.gd  badguy.tscn  cuatom_test.tscn  enemy_tower.tscn  example_node.tscn  game.gdextension  guy.gd  icon.svg.import  lev_1.gd  lev_1.tscn  project.godot  starter_bullet.gd  starter_bullet.tscn
src/: lib.rs  player.rs
tex/: EnemyTower.kra  EnemyTower.png.import  badguy.kra  badguy.png.import  bat.kra  bat.png.import  blt.kra  blt.png.import  flore.kra  flore.png.import  mainplayer.kra  mainplayer.png.import
