[package]
name = "dak_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
name = "dak_game"
path = "src/lib.rs"

[dependencies]
godot = {git = "https://github.com/godot-rust/gdext.git", branch = "master"}